--- a/webflasher/style.css
+++ b/webflasher/style.css
@@ -22,6 +22,7 @@ html, body {
   /* Couleur texte*/
   background: linear-gradient(90deg, #00ff00, #00e1ffc4);
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 
   /* Encadrement */
